<resources>
    <string name="app_name">Chat Hub</string>
    <string name="facebook_app_id">1162646827138704</string>

    <string name="now_online">Online Users</string>
    <string name="current_chat">Messages</string>
    <string name="chat_with_friends">Chat with friends</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="finish">Finish</string>
    <string name="begin_chat">Begin Chat</string>
    <string name="remember_me">Remember me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
