<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abov.chathub.Chat"
    android:orientation="horizontal"
    android:weightSum="2">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/now_online"
                android:id="@+id/now_online_txt"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/finish_fragment_button"
                android:layout_alignEnd="@+id/finish_fragment_button" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/now_online_recycler_view"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/now_online_txt"
                android:layout_above="@+id/finish_fragment_button" />

            <Button
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:id="@+id/finish_fragment_button"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/current_chat"
                android:id="@+id/current_chat_txt"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/current_chat_recycler_view"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/current_chat_txt" />

            <LinearLayout
                android:weightSum="5"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/current_chat_recycler_view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <EditText
                    android:layout_weight="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/messageEditText"
                    android:layout_above="@+id/send_button"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:src="@drawable/messenger_bubble_small_blue"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/send_button"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
